--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Chango&family=Dancing+Script:wght@400..700&family=Lobster&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon/feane-favicon.png" type="image/png">
     <title>Feane</title>
 </head>
 
